--- a/README
+++ b/README
@@ -1,4 +1,18 @@
-Clone this repository
-If you are on windows run init.bat in ADMINISTRATOR mode command prompt. (This guy creates the hard links to the dotfiles directory. Ex: from .bashrc to dotfiles/.bashrc, etc)
-Then open up cygwin, navigate here and run visetup.sh
-That's all for now.
+SETUP
+- Clone this repository
+- Disable Antivirus if you prefer speed of installation.
+- Run cygwinsetup.bat
+- If you are on windows run init.bat in ADMINISTRATOR mode command prompt. (This guy creates the hard links to the dotfiles directory. Ex: from .bashrc to dotfiles/.bashrc, changes shell and fixes home directory in /etc/passwd etc)
+- Setup mintty shortcut
+- Then open up cygwin, navigate here and run setup.zsh
+- Modify gitenv-sap, gitenv-hub with your git environment setup
+- Before doing GIT development run the shell function gitenv-hub() or gitenv-sap(). This will
+source the relevant git file.
+- That's all for now.
+TIPS
+- CD automatically pushes directory onto stack
+- You can use cd - to toggle between first two directories on stack
+- You can use cd [+-]N to move to Nth directory on stack (from top or bottom)
+- You can define mydir=<path> and use cd mydir to jump to mydir. To get automcomplete of named directories you can cd ~my<TAB> and list all your named directories starting with my.
+- Use dirs or dv (alias) to list directories on stack.
+
