--- a/README
+++ b/README
@@ -1,7 +1,8 @@
 SETUP
 - Clone this repository
 - Disable Antivirus if you prefer speed of installation.
-- Run cygwinsetup.bat
+- Download cygwin 'setup.exe' here.
+- Open DOS Command Prompt and run cygwinsetup.bat
 - If you are on windows run init.bat in ADMINISTRATOR mode command prompt. (This guy creates the hard links to the dotfiles directory. Ex: from .bashrc to dotfiles/.bashrc, changes shell and fixes home directory in /etc/passwd etc)
 - Setup mintty shortcut
 - Then open up cygwin, navigate here and run setup.zsh
