--- a/README
+++ b/README
@@ -16,4 +16,9 @@ TIPS
 - You can use cd [+-]N to move to Nth directory on stack (from top or bottom)
 - You can define mydir=<path> and use cd mydir to jump to mydir. To get automcomplete of named directories you can cd ~my<TAB> and list all your named directories starting with my.
 - Use dirs or dv (alias) to list directories on stack.
+- Type zmv command and see http://www.refining-linux.org/archives/36/ZSH-Gem-1-Programmable-file-renaming/
+- See http://unix.stackexchange.com/questions/7453/linux-how-to-split-the-terminal-into-more-than-one-view
+- For screen sessions, Use CTRL-a CTRL-a to toggle and CTRL-a K to kill and CTRL-a \ to kill all 
+- Use CTRL-a a prefix for a nested screen sequence
+- Use 'winkill' alias on cygwin to kill processes by name. Ex: 'winkill notepad.exe'
 
